# Visiting-card-recognition-app

./: .gitignore  README.md  app.py  extract_info.py  info_utils.py  llm_utils.py  merge_info.py  prompt.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
upload_image/: IMG_1282.HEIC
